--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,59 @@ body {
     text-wrap: balance;
   }
 }
+
+@layer base {
+  :root {
+    --background: 353 0% 100%;
+    --foreground: 353 0% 10%;
+    --card: 353 0% 100%;
+    --card-foreground: 353 0% 15%;
+    --popover: 353 0% 100%;
+    --popover-foreground: 353 95% 10%;
+    --primary: 353 100% 44.5%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 353 10% 90%;
+    --secondary-foreground: 0 0% 0%;
+    --muted: 315 10% 95%;
+    --muted-foreground: 353 0% 40%;
+    --accent: 315 10% 90%;
+    --accent-foreground: 353 0% 15%;
+    --destructive: 0 50% 50%;
+    --destructive-foreground: 353 0% 100%;
+    --border: 353 20% 82%;
+    --input: 353 20% 50%;
+    --ring: 353 100% 44.5%;
+    --radius: 0.5rem;
+  }
+  .dark {
+    --background: 353 10% 10%;
+    --foreground: 353 0% 100%;
+    --card: 353 0% 10%;
+    --card-foreground: 353 0% 100%;
+    --popover: 353 10% 5%;
+    --popover-foreground: 353 0% 100%;
+    --primary: 353 100% 44.5%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 353 10% 20%;
+    --secondary-foreground: 0 0% 100%;
+    --muted: 315 10% 25%;
+    --muted-foreground: 353 0% 65%;
+    --accent: 315 10% 25%;
+    --accent-foreground: 353 0% 95%;
+    --destructive: 0 50% 50%;
+    --destructive-foreground: 353 0% 100%;
+    --border: 353 20% 50%;
+    --input: 353 20% 50%;
+    --ring: 353 100% 44.5%;
+    --radius: 0.5rem;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
